# snark

./: .gitignore  .travis.yml  AUTHORS  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build_guide.md  dune  mod.rs  rustfmt.toml
abpr21/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
abpr21/benches/: bench.rs
abpr21/examples/snark-scalability/: bpr20.rs  constraints.rs
abpr21/src/: constraints.rs  data_structures.rs  generator.rs  lib.rs  prover.rs  r1cs_to_qap.rs  test.rs  verifier.rs
abpr21/tests/: mimc.rs
algebra/: Cargo.toml  build.rs  chunk_num_script.py  sudo
algebra-benches/: Cargo.toml  build.rs
algebra-benches/benches/bls12_377/: ec.rs  fq.rs  fq12.rs  fq2.rs  fr.rs  pairing.rs
algebra-benches/benches/bls12_381/: ec.rs  fq.rs  fq12.rs  fq2.rs  fr.rs  pairing.rs
algebra-benches/benches/sw6/: ec.rs  fq.rs  fq3.rs  fq6.rs  fr.rs  pairing.rs
algebra-benches/src/: bls12_381.rs  lib.rs  mnt4_298.rs  mnt4_753.rs  mnt6_298.rs  sw6.rs
algebra-benches/src/curves/: bls12_377.rs  bls12_381.rs  bn254.rs  bn256.rs  bw6_761.rs  cp6_782.rs  mnt4_298.rs  mnt4_753.rs  mnt6_298.rs  mnt6_753.rs  mod.rs  sw6.rs
algebra-benches/src/macros/: batch_arith.rs  ec.rs  field.rs  mod.rs  pairing.rs  utils.rs
algebra-core/: Cargo.toml  build.rs
algebra-core/algebra-core-derive/: Cargo.toml
algebra-core/algebra-core-derive/src/: lib.rs
algebra-core/bw6-assembly/: modadd768-armv8.S  modadd768.S  modmul768-armv8-kos.S  modmul768-armv8-sos.S  modmul768-cios1-nocarry.S  modmul768-sos1-adx.S  modsqr768-armv8-kos.S  modsub768-armv8.S  modsub768.S
algebra-core/field-assembly/: Cargo.toml
algebra-core/field-assembly/src/: arithmetic.rs  assembler.rs  context.rs  lib.rs  utils.rs
algebra-core/gpu/: Cargo.toml
algebra-core/gpu/examples/: helpers.rs  main.rs
algebra-core/gpu/src/: bucket_add.rs  cpu_gpu.rs  lib.rs  scalar_mul.rs
algebra-core/mince/: Cargo.toml
algebra-core/mince/src/: arithmetic.rs  intrinsics.rs  lib.rs
algebra-core/src/: bucketed_add.rs  bytes.rs  groups.rs  io.rs  lib.rs  timing.rs  to_field_vec.rs
algebra-core/src/biginteger/: macros.rs  mod.rs  tests.rs
algebra-core/src/curves/: batch_arith.rs  batch_verify.rs  bucketed_add.rs  glv.rs  gpu_scalar_mul.rs  mod.rs
algebra-core/src/fields/: arithmetic.rs  macros.rs  mod.rs
algebra-core/src/msm/: variable_base.rs
algebra-core/src/serialize/: error.rs  flags.rs  mod.rs
algebra-derive/: Cargo.toml
algebra-derive/src/: lib.rs
algebra-utils/: Cargo.toml
algebra-utils/benches/fft/: fft_bn382.rs  fft_tweedle.rs
algebra-utils/benches/msm/: variable_msm_bn382.rs  variable_msm_tweedle.rs
algebra-utils/src/: lib.rs
algebra-utils/src/fft/: evaluations.rs  multicore.rs
algebra-utils/src/msm/: fixed_base.rs  variable_base.rs
algebra-utils/src/polycommit/: mod.rs
algebra/algebra-derive/: Cargo.toml
algebra/algebra-derive/src/: lib.rs
algebra/benches/: curve_and_field_benches.rs  curve_and_field_benches.rs.bkp
algebra/benches/bls12_377/: ec.rs  fq.rs  fq12.rs  fq2.rs  fr.rs  pairing.rs
algebra/benches/bls12_381/: ec.rs  fq.rs  fq12.rs  fq2.rs  fr.rs  pairing.rs
algebra/benches/criterion_fft/: fft_bn382.rs  fft_tweedle.rs
algebra/benches/criterion_msm/: variable_msm_bn382.rs  variable_msm_tweedle.rs
algebra/benches/curves/: bls12_377.rs  bls12_381.rs  mnt4_753.rs  mnt6_753.rs  mod.rs  sw6.rs
algebra/benches/fft/: mod.rs
algebra/benches/macros/: ec.rs  field.rs  pairing.rs  utils.rs
algebra/benches/mnt4753/: ec.rs  fq.rs  fq2.rs  fq4.rs  fr.rs  mod.rs  pairing.rs
algebra/benches/mnt6753/: ec.rs  fq.rs  fq3.rs  fq6.rs  fr.rs  mod.rs  pairing.rs
algebra/benches/sw6/: ec.rs  fq.rs  fq3.rs  fq6.rs  fr.rs  pairing.rs
algebra/field-assembly/: Cargo.toml
algebra/field-assembly/src/: context.rs  lib.rs  utils.rs
algebra/mince/: Cargo.toml
algebra/mince/src/: intrinsics.rs  lib.rs
algebra/src/: bits.rs  bytes.rs  fake_io.rs  io.rs  lib.rs  rand.rs  to_field_vec.rs  utils.rs  validity.rs
algebra/src/biginteger/: macros.rs  mod.rs  tests.rs
algebra/src/bls12_377/: mod.rs
algebra/src/bls12_381/: mod.rs
algebra/src/bn254/: mod.rs
algebra/src/bn256/: mod.rs
algebra/src/bn_382/: mod.rs
algebra/src/bw6_761/: mod.rs
algebra/src/cp6_782/: mod.rs
algebra/src/curves/: check_curve_parameters.sage  mod.rs  tests.rs
arithmetic-circuits/: Cargo.toml  README.md
arithmetic-circuits/src/: lib.rs  reader.rs
bench-utils/: Cargo.toml
bench-utils/src/: lib.rs
cp-benches/: Cargo.toml
crypto-primitives/: Cargo.toml
crypto-primitives/src/: lib.rs
dpc/: Cargo.toml
dpc/src/: config.rs  lib.rs
dpc/tests/: plain_dpc.rs
ff-fft/: Cargo.toml
ff-fft-benches/: Cargo.toml
ff-fft-benches/benches/: fft.rs
ff-fft/src/: domain.rs  evaluations.rs  lib.rs  multicore.rs  polynomial.rs  test.rs
gm17/: Cargo.toml
gm17/src/: generator.rs  lib.rs  prover.rs  r1cs_to_sap.rs  test.rs  verifier.rs
gm17/tests/: mimc.rs
groth16/: Cargo.toml
groth16/src/: generator.rs  lib.rs  prover.rs  r1cs_to_qap.rs  test.rs  verifier.rs
groth16/tests/: mimc.rs
groupmap/: Cargo.toml
groupmap/src/: lib.rs
groupmap/tests/: groupmap.rs
primitives/: Cargo.toml  timing.txt
primitives/src/: lib.rs
proof-systems/: Cargo.toml
proof-systems/src/: lib.rs
r1cs-core/: Cargo.toml
r1cs-core/src/: constraint_system.rs  error.rs  impl_constraint_var.rs  impl_lc.rs  lib.rs  trace.rs
r1cs-std/: Cargo.toml
r1cs-std-derive/: Cargo.toml
r1cs-std-derive/src/: lib.rs
r1cs-std/src/: alloc.rs  cmp.rs  eq.rs  lib.rs  macros.rs  select.rs  smaller_than.rs  test_constraint_counter.rs  test_constraint_system.rs  to_field_gadget_vec.rs
relations/: Cargo.toml
relations/examples/: Non-Satisfiable.rs  README.MD  Satisfiable.rs  bench-no-finalize.rs  bench.rs  non_satisfiable.rs  satisfiable.rs
relations/src/: lib.rs  reader.rs
snark/: Cargo.toml
snark-gadgets/: Cargo.toml
snark-gadgets/src/: lib.rs  test_constraint_system.rs  utils.rs
snark/src/: lib.rs  r1cs.rs
test-constraint-system/: Cargo.toml
test-constraint-system/src/: lib.rs
(+1123 files in other folders)
