[package]
name = "algebra-benches"
version = "0.1.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu"
]
description = "A benchmark library for finite fields and elliptic curves"
homepage = "https://libzexe.org"
repository = "https://github.com/scipr/zexe"
documentation = "https://docs.rs/algebra/"
keywords = ["cryptography", "finite fields", "elliptic curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"
publish = false

################################# Dependencies ################################

[dev-dependencies]
algebra = { path = "../algebra", features = [ "full" ] }
blake2 = "0.8.1"
criterion = "0.3.1"
rand = "0.7"
rand_xorshift = { version = "0.2" }
