[package]
name = "algebra-benches"
version = "0.1.1-alpha.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu"
]
description = "A benchmark library for finite fields and elliptic curves"
homepage = "https://libzexe.org"
repository = "https://github.com/scipr/zexe"
documentation = "https://docs.rs/algebra/"
keywords = ["cryptography", "finite fields", "elliptic curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"
publish = false
build = "build.rs"

################################# Dependencies ################################

[dev-dependencies]
algebra = { path = "../algebra" }
blake2 = "0.8.1"
rand = "0.7"
rand_xorshift = { version = "0.2" }
paste = "1.0"

[features]
asm = [ "algebra/asm"]
n_fold = []
mnt4_298 = [ "algebra/mnt4_298"]
mnt6_298 = [ "algebra/mnt6_298"]
mnt4_753 = [ "algebra/mnt4_753"]
mnt6_753 = [ "algebra/mnt6_753"]
bn254 = [ "algebra/bn254"]
bls12_381 = [ "algebra/bls12_381"]
bls12_377 = [ "algebra/bls12_377"]
cp6_782 = [ "algebra/cp6_782" ]
bw6_761 = [ "algebra/bw6_761" ]

[build-dependencies]
rustc_version = "0.2"
