[package]
name = "algebra-core"
version = "0.1.1-alpha.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu"
]
description = "A library for finite fields and elliptic curves"
homepage = "https://libzexe.org"
repository = "https://github.com/scipr/zexe"
documentation = "https://docs.rs/algebra/"
keywords = ["cryptography", "finite fields", "elliptic curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"
build = "build.rs"

################################# Dependencies ################################

[dependencies]
algebra-core-derive = { path = "algebra-core-derive", optional = true }
derivative = { version = "2", features = ["use_core"] }
num-traits = { version = "0.2", default-features = false }
rand = { version = "0.7", default-features = false }
rayon = { version = "1", optional = true }
unroll = { version = "=0.1.4" }
itertools = { version = "0.9.0", default-features = false }
either = { version = "1.6.0", default-features = false }
thread-id = { version = "3.3.0", optional = true }
backtrace = { version = "0.3", optional = true }
paste = "0.1"

[build-dependencies]
field-assembly = { path = "./field-assembly", optional = true }
cc = "1.0"
rustc_version = "0.2"

[dev-dependencies]
rand_xorshift = "0.2"

[features]
default = [ "std", "rand/default" ]
std = []
parallel = [ "std", "rayon", "rand/default" ]
derive = [ "algebra-core-derive" ]
prefetch = [ "std" ]

timing = [ "std", "backtrace" ]
timing_detailed = [ "std", "backtrace" ]
timing_thread_id = [ "thread-id" ]

llvm_asm = [ "field-assembly" ]
bw6_asm = []
