[package]
name = "algebra-derive"
version = "0.1.0"
description = "A library for finite fields and elliptic curves"
homepage = "https://libzexe.org"
repository = "https://github.com/scipr/zexe"
documentation = "https://docs.rs/algebra/"
keywords = ["cryptography", "finite fields", "elliptic curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################
[lib]
proc_macro = true

[dependencies]
syn = { version = "1.0.1", features = ["derive"] }
quote = "1.0.0"
proc-macro2 = "1.0.1"

[dev-dependencies]
anyhow = "1.0"