[package]
name = "algebra-utils"
version = "0.1.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu",
    "Daniele Di Benedetto <daniele@horizenlabs.io>",
    "Marcelo Kaihara <marcelo@horizenlabs.io>",
    "Ulrich Haboeck <ulrich@horizenlabs.io>"
]
description = "A library for finite fields, elliptic curves and FFTs evaluation over prime finite fields"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
algebra = { git = "ssh://git@github.com/HorizenOfficial/ginger-lib", branch = "algebra_ocl", features = [ "parallel" ] }

rand = { version = "0.7" }

rayon = { version = "1", optional = true }

# gpu feature
algebra-kernels = { git = "ssh://git@github.com/HorizenOfficial/ginger-algebra-ocl", branch = "master", optional = true }
algebra-cl-gen = { git = "ssh://git@github.com/HorizenOfficial/ginger-algebra-ocl", branch = "master", optional = true }
crossbeam = { version = "0.7", optional = true }

[dev-dependencies]
blake2 = "0.7"
criterion = "0.3.3"
rand_xorshift = { version = "0.2" }
paste = "1.0"
algebra = { git = "ssh://git@github.com/HorizenOfficial/ginger-lib", branch = "algebra_ocl", features = ["bn_382", "tweedle", "bls12_381", "jubjub", "mnt4_753", "mnt6_753"] }
algebra-utils = { path = "../algebra-utils", features = [ "parallel", "fft" ] }
algebra-kernels = { git = "ssh://git@github.com/HorizenOfficial/ginger-algebra-ocl", branch = "master", features = ["bn_382", "tweedle", "bls12_381", "jubjub"] }
bench-utils = { path = "../bench-utils" }

[features]
parallel = [ "rayon" ]
fft = []
gpu = [ "algebra-kernels", "algebra-cl-gen", "crossbeam" ]
llvm_asm = [ "algebra/llvm_asm" ]

[build-dependencies]
rustc_version = "0.2"

[[bench]]
name = "fft_bn382"
path = "benches/fft/fft_bn382.rs"
harness = false

[[bench]]
name = "fft_tweedle"
path = "benches/fft/fft_tweedle.rs"
harness = false

[[bench]]
name = "variable_msm_bn382"
path = "benches/msm/variable_msm_bn382.rs"
harness = false

[[bench]]
name = "variable_msm_tweedle"
path = "benches/msm/variable_msm_tweedle.rs"
harness = false
