[package]
name = "algebra-utils"
version = "0.1.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu",
    "Daniele Di Benedetto <daniele@horizenlabs.io>",
    "Marcelo Kaihara <marcelo@horizenlabs.io>",
    "Ulrich Haboeck <ulrich@horizenlabs.io>"
]
description = "A library for finite fields, elliptic curves and FFTs evaluation over prime finite fields"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
algebra = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "algebra_ocl", features = [ "parallel" ] }

rand = { version = "0.7" }

rayon = { version = "1", optional = true }

# gpu feature
algebra-kernels = { git = "https://github.com/HorizenOfficial/ginger-algebra-ocl", branch = "ginger_ocl", optional = true }
algebra-cl-gen = { git = "https://github.com/HorizenOfficial/ginger-algebra-ocl", branch = "ginger_ocl", optional = true }

[dev-dependencies]
blake2 = "0.7"
criterion = "0.3.3"
rand_xorshift = { version = "0.2" }
paste = "1.0"
bench-utils = { path = "../bench-utils" }
algebra-utils = { path = "../algebra-utils", features = ["dev"] }

[features]
default = [ "parallel", "fft", "msm_affine" ]
dev = [ "bls12_381", "bn_382", "tweedle", "mnt4_753", "mnt6_753" ]

parallel = [ "rayon" ]
fft = []
msm_affine = []
gpu = [ "parallel", "algebra-kernels", "algebra-cl-gen" ]
llvm_asm = [ "algebra/llvm_asm" ]

bls12_377 = [ "algebra-kernels/bls12_377", "algebra/bls12_377" ]
bls12_381 = [ "algebra-kernels/bls12_381", "algebra/bls12_381" ]
edwards_bls12 = [ "algebra-kernels/edwards_bls12", "algebra/edwards_bls12" ]
edwards_sw6 = [ "algebra-kernels/edwards_sw6", "algebra/edwards_sw6" ]
jubjub = [ "algebra-kernels/jubjub", "algebra/jubjub" ]
sw6 = [ "algebra-kernels/sw6", "algebra/sw6" ]
mnt4_753 = [ "algebra-kernels/mnt4_753", "algebra/mnt4_753" ]
mnt6_753 = [ "algebra-kernels/mnt6_753", "algebra/mnt6_753" ]
bn_382 = [ "algebra-kernels/bn_382", "algebra/bn_382" ]
tweedle = [ "algebra-kernels/tweedle", "algebra/tweedle" ]

[build-dependencies]
rustc_version = "0.2"

[[bench]]
name = "fft_bn382"
path = "benches/fft/fft_bn382.rs"
harness = false

[[bench]]
name = "fft_tweedle"
path = "benches/fft/fft_tweedle.rs"
harness = false

[[bench]]
name = "variable_msm_bn382"
path = "benches/msm/variable_msm_bn382.rs"
harness = false

[[bench]]
name = "variable_msm_tweedle"
path = "benches/msm/variable_msm_tweedle.rs"
harness = false
