[package]
name = "algebra"
version = "0.1.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu",
    "Daniele Di Benedetto <daniele@horizenlabs.io>",
    "Marcelo Kaihara <marcelo@horizenlabs.io>",
    "Ulrich Haboeck <ulrich@horizenlabs.io>"
]
description = "A library for finite fields, elliptic curves and FFTs evaluation over prime finite fields"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"
build = "build.rs"


################################# Dependencies ################################

[dependencies]
byteorder = { version = "1" }
rand = { version = "0.7" }
derivative = { version = "2" }

colored = { version = "1", optional = true }
rayon = { version = "1", optional = true }
clippy = { version = "*", optional = true }

unroll = "0.1.4"

serde = { version = "1.0.117", features = ["derive"]}

[dev-dependencies]
blake2 = "0.7"
criterion = "0.2"
rand_xorshift = { version = "0.2" }
paste = "1.0"
algebra = { path = "../algebra", features = ["bls12_381", "jubjub", "mnt4_753", "mnt6_753"] }

[features]
parallel = [ "rayon" ]
fft = ["rayon"]
n_fold = []
llvm_asm = []

bls12_377 = []
bls12_381 = []
edwards_bls12 = []
edwards_sw6 = []
jubjub = []
sw6 = []
mnt4_753 = []
mnt6_298 = []
mnt6_753 = []
bn_382 = []

full = [ "bls12_377", "bls12_381", "sw6", "mnt4_753", "mnt6_298", "mnt6_753", "edwards_bls12", "edwards_sw6", "jubjub", "bn_382" ]

[build-dependencies]
field-assembly = { path = "./field-assembly" }
rustc_version = "0.2"