[package]
name = "ark-arithmetic-circuits"
version.workspace = true
authors.workspace = true
description = "A library for arithmetic circuits"
homepage.workspace = true
repository.workspace = true
keywords = ["zero-knowledge", "cryptography", "arithmetic-circuits"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license.workspace = true
edition.workspace = true

[dependencies]
ark-std.workspace = true
ark-ff.workspace = true
ark-relations = { version = "0.5.0-alpha", default-features = false }
itertools = { version = "0.13.0", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = [ "full" ] }
ark-ec = { version = "0.5.0-alpha", default-features = false }
ark-circom = { git = "https://github.com/arkworks-rs/circom-compat", branch = "release-0.5" }
ark-bn254 = { version = "0.5.0-alpha", default-features = false, features = [ "curve" ] }
ark-bls12-377 = { version = "0.5.0-alpha", default-features = false, features = [ "curve" ] }

[features]
default = [ "itertools/use_alloc" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-relations/std", "itertools/use_alloc" ]
