[package]
name = "crypto-primitives"
version = "0.1.0"
authors = ["Pratyush Mishra <pratyushmishra@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { path = "../algebra" }
r1cs-core = { path = "../r1cs-core", optional = true }
r1cs-std = { path = "../r1cs-std", optional = true }
gm17 = { path = "../gm17", optional = true }
bench-utils = { path = "../bench-utils" }

digest = "0.7"
blake2 = "0.7"

rand = { version = "0.7" }
derivative = "1"
rayon = "1"

[features]
r1cs = [ "r1cs-core", "r1cs-std" ]

[dev-dependencies]
criterion = "0.2"
rand_xorshift = { version = "0.2" }

